--- a/index.html
+++ b/index.html
@@ -2,300 +2,92 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Frontend Mentor | Landing page with detailed integrations section
-    </title>
+    <!-- displays site properly based on user's device -->
+
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./vendors/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./resources/css/main.css" />
+
+    <title>Frontend Mentor | Bookmark landing page</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body>
-    <header class="container">
-      <nav>
-        <a href="#" class="logo">
-          <img src="./vendors/images/logo.svg" alt="logo" />
-        </a>
-        <span>
-          <a class="link" href="#">sign in</a>
-          <a class="link greenButton" href="#">sign up</a>
-        </span>
-      </nav>
-      <section>
-        <div class="header__image">
-          <img src="./vendors/images/illustration-main.svg" alt="headerImage" />
-        </div>
-        <span>
-          <h1>
-            All your files in one <br />
-            secure location, <br />
-            accessible anywhere.
-          </h1>
-          <p>
-            Fylo stores all your most important files in one secure location.
-            Access them wherever you need,share and collaborate with
-            friends,family and co-workers.
-          </p>
-          <a class="link bigButton greenButton" href="#">Get Started</a>
-        </span>
-      </section>
-    </header>
-    <div class="header__curvedBottom">
-      <img
-        src="./vendors/images/headerBottomBackground-mobile.svg"
-        alt="bottomBackground-mobile"
-      />
-      <img
-        src="./vendors/images/headerBottomBackground-desktop.svg"
-        alt="bottomBackground-desktop"
-      />
-    </div>
-    <main>
-      <section class="introduction__features">
-        <span class="container">
-          <h2>
-            Stay productive, <br />
-            wherever you are
-          </h2>
-          <p>
-            Never let location be an issue when accessing your files. Fylo has
-            you covered for all of your file storage needs.
-          </p>
-        </span>
-        <span class="container">
-          <figure>
-            <img src="./vendors/images/icon-devices.svg" alt="devices" />
-            <figcaption>
-              All platforms, all <br />
-              devices, all your files
-            </figcaption>
-          </figure>
-          <figure>
-            <img src="./vendors/images/icon-security.svg" alt="security" />
-            <figcaption>
-              Security you can trust
-            </figcaption>
-          </figure>
-          <figure>
-            <img
-              src="./vendors/images/icon-collaboration.svg"
-              alt="collaboration"
-            />
-            <figcaption>
-              Real-time collaboration
-            </figcaption>
-          </figure>
-        </span>
-      </section>
-      <div class="introduction__features__background">
-        <img
-          src="./vendors/images/headerBottomBackground-mobile.svg"
-          alt="bottomBackground-mobile"
-        />
-        <img
-          src="./vendors/images/headerBottomBackground-desktop.svg"
-          alt="bottomBackground-desktop"
-        />
-      </div>
-      <section class="introduction__apps container">
-        <span>
-          <h2>
-            Connect with the apps you <br />
-            use everyday
-          </h2>
-          <p>
-            Fylo seamlessly integrates with hundreds if apps, meaning you can
-            access and work on your files from the apps you already know and
-            love.
-          </p>
-        </span>
-        <span>
-          <figure>
-            <div>
-              <img src="./vendors/images/logo-slack.png" alt="logo-slack" />
-            </div>
-            <figcaption>
-              <h3>Slack</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Mollitia assumenda dolorum ut ex, velit nostrum.
-              </p>
-            </figcaption>
-          </figure>
-          <figure>
-            <div>
-              <img src="./vendors/images/logo-gsuite.png" alt="logo-gsuite" />
-            </div>
-            <figcaption>
-              <h3>Gsuite</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                eaque dolores ipsum. Nam, adipisci et?
-              </p>
-            </figcaption>
-          </figure>
-          <figure>
-            <div>
-              <img src="./vendors/images/logo-trello.png" alt="logo-trello" />
-            </div>
-            <figcaption>
-              <h3>Trello</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                eaque dolores ipsum. Nam, adipisci et?
-              </p>
-            </figcaption>
-          </figure>
-          <figure>
-            <div>
-              <img src="./vendors/images/logo-asana.png" alt="logo-asana" />
-            </div>
-            <figcaption>
-              <h3>Asana</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                eaque dolores ipsum. Nam, adipisci et?
-              </p>
-            </figcaption>
-          </figure>
-          <figure>
-            <div>
-              <img
-                src="./vendors/images/logo-salesforce.png"
-                alt="logo-salesforce"
-              />
-            </div>
+    Features Pricing Contact Login A Simple Bookmark Manager A clean and simple
+    interface to organize your favourite websites. Open a new browser tab and
+    see your sites load instantly. Try it for free. Get it on Chrome Get it on
+    Firefox Features Our aim is to make it quick and easy for you to access your
+    favourite websites. Your bookmarks sync between your devices so you can
+    access them on the go. Simple Bookmarking Speedy Searching Easy Sharing
+    Bookmark in one click Organize your bookmarks however you like. Our simple
+    drag-and-drop interface gives you complete control over how you manage your
+    favourite sites. More Info Intelligent search Our powerful search feature
+    will help you find saved sites in no time at all. No need to trawl through
+    all of your bookmarks. More Info Share your bookmarks Easily share your
+    bookmarks and collections with others. Create a shareable link that you can
+    send at the click of a button. More Info Download the extension We’ve got
+    more browsers in the pipeline. Please do let us know if you’ve got a
+    favourite you’d like us to prioritize. Add to Chrome Minimum version 62 Add
+    & Install Extension Add to Firefox Minimum version 55 Add & Install
+    Extension Add to Opera Minimum version 46 Add & Install Extension Frequently
+    Asked Questions Here are some of our FAQs. If you have any other questions
+    you’d like answered please feel free to email us.
 
-            <figcaption>
-              <h3>Salesforce</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                eaque dolores ipsum. Nam, adipisci et?
-              </p>
-            </figcaption>
-          </figure>
-          <figure>
-            <div>
-              <img
-                src="./vendors/images/logo-typeform.png"
-                alt="logo-typeform"
-              />
-            </div>
-            <figcaption>
-              <h3>Typeform</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
-                eaque dolores ipsum. Nam, adipisci et?
-              </p>
-            </figcaption>
-          </figure>
-        </span>
-      </section>
-      <section class="introduction__signUp container">
-        <h2>Start using Fylo today</h2>
-        <p>
-          It only takes a minute to sign up and our free starter tier is
-          extremely generous. If you have any questions, our support team would
-          be happy to help you.
-        </p>
-        <a href="#" class="link bigButton greenButton">Get Started</a>
-      </section>
-    </main>
-    <footer class="container">
-      <span class="contactUs">
-        <a href="#" class="logo">
-          <img src="./vendors/images/logo-white.svg" alt="logo" />
-        </a>
-        <p>
-          Receive updates from us, including tips and tricks on how to improve
-          your workflow.
-        </p>
-        <form action="#" method="POST">
-          <input type="email" placeholder="email@example.com" />
-          <button type="submit" class="link greenButton bigButton">Join</button>
-        </form>
-        <span>
-          <a href="tel:15431234568">
-            <img src="./vendors/images/icon-phone.svg" alt="phone number" />
-            <p>Phone:+1-543-123-4568</p>
-          </a>
-          <a href="mailto:example@fylo.com">
-            <img src="./vendors/images/icon-email.svg" alt="email address" />
-            <p>exmple@fylo.com</p>
-          </a>
-        </span>
-      </span>
-      <nav>
-        <ul>
-          <h3>Fylo</h3>
-          <li>
-            <a href="">
-              Desktop app
-            </a>
-          </li>
-          <li>
-            <a href="">
-              Mobile app
-            </a>
-          </li>
-          <li>
-            <a href="">
-              pricing
-            </a>
-          </li>
-          <li>
-            <a href="">
-              feature
-            </a>
-          </li>
-        </ul>
-        <ul>
-          <h3>company</h3>
-          <li>
-            <a href="">
-              about us
-            </a>
-          </li>
-          <li>
-            <a href="">
-              jobs
-            </a>
-          </li>
-          <li>
-            <a href="">
-              press
-            </a>
-          </li>
-          <li>
-            <a href="">
-              blog
-            </a>
-          </li>
-        </ul>
-        <ul>
-          <h3>support</h3>
-          <li>
-            <a href="">
-              contact us
-            </a>
-          </li>
-          <li>
-            <a href="">
-              terms
-            </a>
-          </li>
-          <li>
-            <a href="">
-              privacy
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <!-- Question 1 -->
+    What is Bookmark?
+
+    <!-- Answer 1 -->
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt
+    justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare
+    mattis.
+
+    <!-- Question 2 -->
+    How can I request a new browser?
+
+    <!-- Answer 2 -->
+    Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet
+    convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse
+    imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue
+    massa, ultricies non ligula. Suspendisse imperdiet.
+
+    <!-- Question 3 -->
+    Is there a mobile app?
+
+    <!-- Answer 3 -->
+    Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum
+    dolor, ut condimentum urna vulputate eget. Cras in ligula quis est pharetra
+    mattis sit amet pharetra purus. Sed sollicitudin ex et ultricies bibendum.
+
+    <!-- Question 4 -->
+    What about other Chromium browsers?
+
+    <!-- Answer 4 -->
+    Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at
+    euismod dui. Aliquam vitae neque eget nisl gravida pellentesque non ut
+    velit. More Info 35,000+ already joined Stay up-to-date with what we’re
+    doing Contact Us Features Pricing Contact
+
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </p>
     </footer>
   </body>
 </html>
